# MetaNN

./: CMakeLists.txt  MyReadMe.md  main.cpp
Tests/: CMakeLists.txt  calculate_tags.h  data_gen.h
Tests/DataOpTest/: DataOpTest.cpp  DataOpTest.h
Tests/DataOpTest/data/: _.h  test_bias_vector.cpp  test_dynamic.cpp  test_scalable_tensor.cpp  test_scalar.cpp  test_tensor.cpp  test_trivial_tensor.cpp  test_zero_tensor.cpp
Tests/DataOpTest/data/facilities/: test_shape.cpp
Tests/DataOpTest/operation/: _.h
Tests/DataOpTest/operation/math/: test_abs.cpp  test_acos.cpp  test_acosh.cpp  test_add.cpp  test_asin.cpp  test_asinh.cpp  test_cos.cpp  test_divide.cpp  test_exp.cpp  test_multiply.cpp  test_negative.cpp  test_reduce_sum.cpp  test_sigmoid.cpp  test_sign.cpp  test_sin.cpp  test_square.cpp  test_substract.cpp  test_tan.cpp  test_tanh.cpp
Tests/DataOpTest/operation/nn/: test_nll_loss.cpp  test_relu.cpp  test_softmax.cpp
Tests/DataOpTest/operation/others/: test_interpolate.cpp
Tests/DataOpTest/operation/tensor/: test_dot.cpp  test_permute.cpp  test_reshape.cpp  test_slice.cpp  test_tile.cpp
Tests/LayerTest/: LayerTest.cpp  LayerTest.h
Tests/LayerTest/composite/: test_bias_layer.cpp  test_compose_kenrel.cpp  test_linear_layer.cpp  test_single_layer_perceptron.cpp  test_weight_layer.cpp
Tests/LayerTest/principal/: _.h
Tests/LayerTest/principal/math/: test_abs_layer.cpp  test_acos_layer.cpp  test_acosh_layer.cpp  test_add_layer.cpp  (+10 more)
Tests/LayerTest/recurrent/: test_gru.cpp  test_recurrent_layer.cpp
Tests/OtherTests/: OtherTest.cpp  OtherTests.h
Tests/OtherTests/facilities/: test_map.cpp  test_multi_map.cpp  test_sequential.cpp  test_set.cpp
Tests/OtherTests/policies/: test_policy_operations.cpp
(+144 files in other folders)
